homepage loading; with updated versions of all dependencies

--- a/gatsby-theme-replica/src/styles/article.css
+++ b/gatsby-theme-replica/src/styles/article.css
@@ -56,10 +56,10 @@ article > h6 {
 article > p {
   /*@apply mb-4;*/
 }
-
-article a:link{
+/* // TODO: fix error here due to @apply */
+/* article a:link{
   @apply text-blue;
-}
+} */
 
 article ul,
 article ol {
