--- a/gatsby-theme-replica/src/styles/base.css
+++ b/gatsby-theme-replica/src/styles/base.css
@@ -1,15 +1,16 @@
-body {
+/* // TODO: fix error here due to @apply */
+/* body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
   @apply text-gray-dark;
-}
+} */
 
 * {
   transition: width 200ms ease-in;
 }
 
-a {
+/* a {
   @apply text-blue;
-}
+} */
 
 a:hover {
   text-decoration: underline;
